Check for gc log file overwritten on JVM startup.